--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <main>
             <figure>
                 <div class="wheel1">
-                    <a class="a-wheel" href="#"> <img class="img-wheel1" src="img/goodyear.jpg" alt=""> </a>
+                    <a class="a-wheel" href="#"> <img class="img-wheel1" src="img/goodyear.png" alt=""> </a>
                     <figcaption>
                         <p class="p1">Goodyear</p>
                         <p class="p2">Ultra&nbsp;Grip&nbsp;Extreme</p>
@@ -97,7 +97,7 @@
             </figure>
             <figure>
                 <div class="wheel2">
-                    <a class="a-wheel" href="#"> <img class="img-wheel2" src="img/nokian.jpg" alt=""> </a>
+                    <a class="a-wheel" href="#"> <img class="img-wheel2" src="img/nokian.png" alt=""> </a>
                     <figcaption>
                         <p class="p11">Nokian</p>
                         <p class="p12">Hakkapeliitta&nbsp;R</p>
@@ -107,7 +107,7 @@
             </figure>
             <figure>
                 <div class="wheel3">
-                    <a class="a-wheel" href="#"> <img class="img-wheel3" src="img/hankook.jpg" alt=""> </a>
+                    <a class="a-wheel" href="#"> <img class="img-wheel3" src="img/hankook.png" alt=""> </a>
                     <p class="p1">Hankook</p>
                     <p class="p22">K&nbsp;708&nbsp;155/65&nbsp;R14</p>
                     <p class="p23">393.00<span class="grn">&nbsp;грн</span></p>
@@ -115,7 +115,7 @@
             </figure>
             <figure>
                 <div class="wheel1">
-                    <a class="a-wheel" href="#"> <img class="img-wheel1" src="img/goodyear.jpg" alt=""> </a>
+                    <a class="a-wheel" href="#"> <img class="img-wheel1" src="img/goodyear.png" alt=""> </a>
                     <figcaption>
                         <p class="p1">Goodyear</p>
                         <p class="p2">Ultra&nbsp;Grip&nbsp;Extreme</p>
@@ -125,7 +125,7 @@
             </figure>
             <figure>
                 <div class="wheel2">
-                    <a class="a-wheel" href="#"> <img class="img-wheel2" src="img/nokian.jpg" alt=""> </a>
+                    <a class="a-wheel" href="#"> <img class="img-wheel2" src="img/nokian.png" alt=""> </a>
                     <figcaption>
                         <p class="p11">Nokian</p>
                         <p class="p12">Hakkapeliitta&nbsp;R</p>
@@ -135,7 +135,7 @@
             </figure>
             <figure>
                 <div class="wheel3">
-                    <a class="a-wheel" href="#"> <img class="img-wheel3" src="img/hankook.jpg" alt=""> </a>
+                    <a class="a-wheel" href="#"> <img class="img-wheel3" src="img/hankook.png" alt=""> </a>
                     <p class="p1">Hankook</p>
                     <p class="p22">K&nbsp;708&nbsp;155/65&nbsp;R14</p>
                     <p class="p23">393.00<span class="grn">&nbsp;грн</span></p>
@@ -143,7 +143,7 @@
             </figure>
             <figure>
                 <div class="wheel1">
-                    <a class="a-wheel" href="#"> <img class="img-wheel1" src="img/goodyear.jpg" alt=""> </a>
+                    <a class="a-wheel" href="#"> <img class="img-wheel1" src="img/goodyear.png" alt=""> </a>
                     <figcaption>
                         <p class="p1">Goodyear</p>
                         <p class="p2">Ultra&nbsp;Grip&nbsp;Extreme</p>
@@ -153,7 +153,7 @@
             </figure>
             <figure>
                 <div class="wheel2">
-                    <a class="a-wheel" href="#"> <img class="img-wheel2" src="img/nokian.jpg" alt=""> </a>
+                    <a class="a-wheel" href="#"> <img class="img-wheel2" src="img/nokian.png" alt=""> </a>
                     <figcaption>
                         <p class="p11">Nokian</p>
                         <p class="p12">Hakkapeliitta&nbsp;R</p>
@@ -163,7 +163,7 @@
             </figure>
             <figure>
                 <div class="wheel3">
-                    <a class="a-wheel" href="#"> <img class="img-wheel3" src="img/hankook.jpg" alt=""> </a>
+                    <a class="a-wheel" href="#"> <img class="img-wheel3" src="img/hankook.png" alt=""> </a>
                     <p class="p1">Hankook</p>
                     <p class="p22">K&nbsp;708&nbsp;155/65&nbsp;R14</p>
                     <p class="p23">393.00<span class="grn">&nbsp;грн</span></p>
