--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             </span> </li>
                 <li>
                     <form action="#"> <img class="avtor" src="img/avtor.png" alt="">
-                        <input class="log1" type="text" name="log" placeholder="&nbsp;логин">
-                        <input class="log2" type="text" name="log" placeholder="&nbsp;пароль"> <a href="#" class="t1"><span class="st">вход</span> &nbsp;|</a> <a href="#" class="t2"><span class="st">регистрация</span></a> <a href="#" class="t3"><span class="st">забыли пароль?</span></a> </form>
+                        <input class="log1" type="text" name="log" placeholder="&nbsp;&nbsp;логин">
+                        <input class="log2" type="text" name="log" placeholder="&nbsp;&nbsp;пароль"> <a href="#" class="t1"><span class="st">вход</span> &nbsp;|</a> <a href="#" class="t2"><span class="st">регистрация</span></a> <a href="#" class="t3"><span class="st">забыли пароль?</span></a> </form>
                 </li>
                 <li>
                     <div class="icon">
@@ -179,30 +179,30 @@
             </div>
             <div class=chbox>
                 <input type="checkbox" id="c1" name="cc">
-                <label for="c1" class="lab"><span></span>Брендс&nbsp;1</label>
+                <label for="c1" class="lab"><span></span>Бренд&nbsp;1</label>
             </div>
             <div class=chbox>
                 <input type="checkbox" id="c2" name="cc">
-                <label for="c2" class="lab"><span></span>Брендс&nbsp;2</label>
+                <label for="c2" class="lab"><span></span>Бренд&nbsp;2</label>
             </div>
             <div class=chbox>
                 <input type="checkbox" id="c3" name="cc">
-                <label for="c3" class="lab"><span></span>Брендс&nbsp;3</label>
+                <label for="c3" class="lab"><span></span>Бренд&nbsp;3</label>
             </div>
             <div class="disk disk2">
                 <p class="text-disk text-disk2">ДИСКИ</p>
             </div>
             <div class=chbox>
                 <input type="checkbox" id="c4" name="cc">
-                <label for="c4" class="lab"><span></span>Брендс&nbsp;1</label>
+                <label for="c4" class="lab"><span></span>Бренд&nbsp;1</label>
             </div>
             <div class=chbox>
                 <input type="checkbox" id="c5" name="cc">
-                <label for="c5" class="lab"><span></span>Брендс&nbsp;2</label>
+                <label for="c5" class="lab"><span></span>Бренд&nbsp;2</label>
             </div>
             <div class=chbox>
                 <input type="checkbox" id="c6" name="cc">
-                <label for="c6" class="lab"><span></span>Брендс&nbsp;3</label>
+                <label for="c6" class="lab"><span></span>Бренд&nbsp;3</label>
             </div>
             <button class="butt">ВЫБРАТЬ</button>
         </aside>
@@ -211,9 +211,9 @@
     <footer>
         <div class="footer">
             <ul class="menu3">
-                <li><a href="#"><span>О компании</span>&nbsp;&nbsp;&nbsp;|</a></li>
-                <li><a href="#"><span>&nbsp;Доставка&nbsp;</span>&nbsp;&nbsp;&nbsp;|</a></li>
-                <li><a href="#"><span>&nbsp;Статьи&nbsp;</span>&nbsp;&nbsp;&nbsp;|</a></li>
+                <li><a href="#"><span>О компании</span>&nbsp;&nbsp;&nbsp;&nbsp;|</a></li>
+                <li><a href="#"><span>&nbsp;Доставка&nbsp;&nbsp;</span>&nbsp;&nbsp;&nbsp;|</a></li>
+                <li><a href="#"><span>&nbsp;Статьи&nbsp;&nbsp;</span>&nbsp;&nbsp;&nbsp;|</a></li>
                 <li><a href="#"><span>&nbsp;Контакты </span></a></li>
             </ul>
             <p class="p4"> Создание сайта © Global Vision </p>
