--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
                 <li>
                     <form action="#"> <img class="avtor" src="img/avtor.png" alt="">
                         <input class="log1" type="text" name="log" placeholder="&nbsp;&nbsp;логин">
-                        <input class="log2" type="text" name="log" placeholder="&nbsp;&nbsp;пароль"> <a href="#" class="t1"><span class="st">вход</span> &nbsp;|</a> <a href="#" class="t2"><span class="st">регистрация</span></a> <a href="#" class="t3"><span class="st">забыли пароль?</span></a> </form>
+                        <input class="log2" type="text" name="log" placeholder="&nbsp;&nbsp;пароль"> 
+<!--                        <a href="#" class="t1"><span class="st">вход</span> &nbsp;|</a> -->
+                       <button class="log3" value="Вход" name="log">вход</button>
+                       <span class="log-span"> | </span>
+                        <a href="#" class="t2"><span class="st">регистрация</span></a> <a href="#" class="t3"><span class="st">забыли пароль?</span></a> </form>
                 </li>
                 <li>
                     <div class="icon">
@@ -34,9 +38,9 @@
         <ul id="menu1">
             <li><a href="#">О КОМПАНИИ</a></li>
             <li><a href="#">ОПЛАТА</a></li>
-            <li><a href="#">ДОСТАВКА</a></li>
-            <li><a href="#">СТАТЬИ</a></li>
-            <li><a href="#">КОНТАКТЫ</a></li>
+            <li><a href="#">&nbsp;&nbsp;ДОСТАВКА</a></li>
+            <li><a href="#">&nbsp;СТАТЬИ</a></li>
+            <li><a href="#">&nbsp;КОНТАКТЫ</a></li>
             <li>
                 <a href="#"></a>
             </li>
@@ -211,9 +215,9 @@
     <footer>
         <div class="footer">
             <ul class="menu3">
-                <li><a href="#"><span>О компании</span>&nbsp;&nbsp;&nbsp;&nbsp;|</a></li>
-                <li><a href="#"><span>&nbsp;Доставка&nbsp;&nbsp;</span>&nbsp;&nbsp;&nbsp;|</a></li>
-                <li><a href="#"><span>&nbsp;Статьи&nbsp;&nbsp;</span>&nbsp;&nbsp;&nbsp;|</a></li>
+                <li><a href="#"><span>О компании</span></a></li>
+                <li><a href="#"><span>Доставка</span></a></li>
+                <li><a href="#"><span>Статьи&nbsp;</span></a></li>
                 <li><a href="#"><span>&nbsp;Контакты </span></a></li>
             </ul>
             <p class="p4"> Создание сайта © Global Vision </p>
